--- a/RemoteAdvisor/Views/Home/Index.cshtml
+++ b/RemoteAdvisor/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                                 <div class="media-control inactive-control text-center" id="local-video-switch" data-value="off"><i id="my-cam-off" class="fa fa-video-slash"></i><i id="my-cam-on" class="fa fa-video hidden"></i></div>
                                 <span style="width:10px"></span>
                                 <div class="media-control inactive-control text-center" id="local-microphone-switch" data-value="off"><i id="my-mic-off" class="fa fa-microphone-slash"></i><i id="my-mic-on" class="fa fa-microphone hidden"></i></div>
-                                <button id="video-button" type="button" disabled="true;" class="btn btn-sm btn-primary matching-button">Join Call</button>
+                                <button id="video-button" type="button" disabled="true" class="btn btn-sm btn-primary matching-button">Join Call</button>
                                 <button id="hang-up-button" type="button" disabled="true" class="btn btn-sm btn-primary matching-button hidden">Hang Up</button>
                             </div>
                         </div>
