--- a/RemoteAdvisor/Content/Join.css
+++ b/RemoteAdvisor/Content/Join.css
@@ -21,11 +21,10 @@
 
 .video-panel {
     height: 180px;
-
     background-color: black;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .toolbar {
@@ -35,6 +34,7 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+
 .toolbar-icon {
     background-color: white;
     color: #007bff !important;
@@ -56,6 +56,7 @@
     width: 50px;
     border-radius: 5px;
     margin-left: 10px;
+    padding-top: 4px;
 }
 
 .active-control {
@@ -94,7 +95,7 @@
     padding: 8px;
     border-radius: 5px;
     margin-right: 10px;
-    max-width:350px;
+    max-width: 350px;
 }
 
 .matching-button {
@@ -107,6 +108,23 @@
     cursor: move
 }
 
-.dropdown-area{ margin-top:20px;}
-#show-logs{cursor:pointer}
-.log-console {height:500px; overflow-y:scroll}
+.dropdown-area {
+    margin-top: 20px;
+}
+
+#show-logs {
+    cursor: pointer
+}
+
+.log-console {
+    height: 500px;
+    overflow-y: scroll
+}
+
+.red {
+    background-color: red
+}
+
+.blue {
+    background-color: blue
+}
