--- a/RemoteAdvisor/Views/Home/Join.cshtml
+++ b/RemoteAdvisor/Views/Home/Join.cshtml
@@ -8,6 +8,7 @@
 <head>
     <title>Remote Advisor</title>
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
@@ -31,7 +32,7 @@
             <div class="row" id="remote-displays">
                 <!-- Local Video Preview-->
                 <div id="local-panel" class="col-5 formal-section video-card-holder draggable">
-                    <h5 class="drag-bar">My Video Preview</h5>
+                    <h5>My Video Preview</h5>
                     <div class="video-card">
                         <div id="video" class="video-panel"></div>
                         <div id="video-bar" class="toolbar">
